--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "author": "Weiping Xiang <weiping.xiang@shopee.com>",
   "license": "MIT",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.12.0",
+    "@typescript-eslint/parser": "^2.12.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "prettier": "^1.19.1",
+    "ts-node": "^8.5.4",
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "protobufjs": "^6.8.8",
-    "ts-node": "^8.5.4"
+    "protobufjs": "^6.8.8"
   }
 }
