--- a/package.json
+++ b/package.json
@@ -1,22 +1,28 @@
 {
   "name": "pb-to-typescript",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "unpkg": "dist/index.umd.js",
   "repository": "https://github.com/brandonxiang/pb-to-typescript.git",
   "author": "Weiping Xiang <weiping.xiang@shopee.com>",
   "license": "MIT",
   "scripts": {
-    "build": "bili src/index.ts --format cjs,esm,umd --module-name PbToTs"
+    "build": "microbundle --globals protobufjs=protobuf"
   },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
-    "bili": "^4.8.1",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "microbundle": "^0.11.0",
     "prettier": "^1.19.1",
     "rollup-plugin-typescript2": "^0.25.3",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
     "typescript": "^3.7.4"
   },
