--- a/package.json
+++ b/package.json
@@ -8,17 +8,20 @@
   "author": "Weiping Xiang <weiping.xiang@shopee.com>",
   "license": "MIT",
   "scripts": {
-    "build": "microbundle --globals protobufjs=protobuf"
+    "build": "microbundle --globals protobufjs=protobuf",
+    "test": "jest"
   },
   "files": [
     "dist"
   ],
   "devDependencies": {
+    "@types/jest": "^24.0.24",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^24.9.0",
     "microbundle": "^0.11.0",
     "prettier": "^1.19.1",
     "rollup-plugin-typescript2": "^0.25.3",
