--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Weiping Xiang <weiping.xiang@shopee.com>",
   "license": "MIT",
   "scripts": {
-    "build:example": "microbundle  --globals protobufjs=protobuf -f umd -o example",
+    "cp:example": "cp dist/index.umd.js example",
     "build": "microbundle --globals protobufjs=protobuf",
     "test": "jest",
     "lint": "eslint --fix"
