move source code

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,5 +25,8 @@
   },
   "bugs": {
     "url": "https://github.com/brandonxiang/pb-to-typescript/issues"
+  },
+  "dependencies": {
+    "protobufjs": "^6.8.9"
   }
 }
