--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pb-to-typescript-tool",
-  "version": "1.0.2",
+  "name": "pb-to-typescript",
+  "version": "1.0.3",
   "umd:main": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "main": "dist/index.js",
