--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pbts-cli",
-  "version": "2.1.2",
+  "version": "1.0.3",
   "description": "> TODO: description",
   "author": "weiping.xiang <weiping.xiang@shopee.com>",
   "homepage": "https://github.com/brandonxiang/pb-to-typescript#readme",
@@ -13,9 +13,6 @@
   "files": [
     "lib"
   ],
-  "publishConfig": {
-    "registry": "https://registry.npm.taobao.org/"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brandonxiang/pb-to-typescript.git"
@@ -25,5 +22,13 @@
   },
   "bugs": {
     "url": "https://github.com/brandonxiang/pb-to-typescript/issues"
+  },
+  "dependencies": {
+    "commander": "^5.0.0",
+    "pbts": "^1.0.3",
+    "protobufjs": "^6.8.9"
+  },
+  "bin": {
+    "pbts": "lib/index.js"
   }
 }
