--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pb-to-typescript",
-  "version": "2.1.2",
+  "name": "pbts",
+  "version": "1.0.3",
   "description": "> TODO: description",
   "author": "weiping.xiang <weiping.xiang@shopee.com>",
   "homepage": "https://github.com/brandonxiang/pb-to-typescript#readme",
@@ -13,9 +13,6 @@
   "files": [
     "lib"
   ],
-  "publishConfig": {
-    "registry": "https://registry.npm.taobao.org/"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brandonxiang/pb-to-typescript.git"
