--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,7 +28,11 @@
     "commander": "^5.0.0",
     "globby": "^11.0.0",
     "pbts": "^1.0.3",
-    "protobufjs": "^6.8.9"
+    "protobufjs": "^6.8.9",
+    "fs-extra": "^9.0.1"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^9.0.1"
   },
   "bin": {
     "pbts": "lib/index.js"
