--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,23 +1,48 @@
 {
-  "name": "pbts-web",
-  "version": "1.0.3",
-  "description": "> TODO: description",
-  "author": "weiping.xiang <weiping.xiang@shopee.com>",
-  "homepage": "https://github.com/brandonxiang/pb-to-typescript#readme",
+  "name": "svelte-webpack-template",
+  "version": "1.0.0",
+  "private": true,
+  "repository": "https://github.com/brandonxiang/svelte-webpack-template.git",
+  "author": "brandonxiang <1542453460@qq.com>",
   "license": "MIT",
-  "main": "lib/index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+  "scripts": {
+    "build": "cross-env NODE_ENV=production webpack",
+    "dev": "webpack-dev-server",
+    "analyze": "NODE_ENV=production webpack --env.analyze=true --mode=production --progress"
   },
-  "files": [
-    "lib"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/brandonxiang/pb-to-typescript.git"
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "autoprefixer": "^9.6.1",
+    "babel-loader": "^8.0.6",
+    "copy-webpack-plugin": "^5.0.3",
+    "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
+    "file-loader": "^4.2.0",
+    "globby": "^10.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.6.0",
+    "style-loader": "^0.23.1",
+    "svelte-loader": "2.13.3",
+    "svelte-preprocess": "^2.15.1",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.30.0",
+    "webpack-bundle-analyzer": "^3.4.1",
+    "webpack-cli": "^3.3.5",
+    "webpack-dev-server": "^3.3.1"
   },
-  "bugs": {
-    "url": "https://github.com/brandonxiang/pb-to-typescript/issues"
-  }
+  "dependencies": {
+    "@babel/runtime": "^7.7.7",
+    "svelte": "^3.0.0",
+    "pbts": "^1.0.3",
+    "clipboard": "^2.0.8"
+  },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ]
 }
