--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,8 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
-  "jsxBracketSameLine": false
+  "jsxBracketSameLine": false,
+  "bracketSpacing": true,
+  "trailingComma": "es5",
+  "endOfLine": "lf"
 }
