--- a/package.json
+++ b/package.json
@@ -23,12 +23,28 @@
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-svelte3": "^2.7.3",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^24.9.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "husky": "^3.0.4",
+    "lint-staged": "^9.2.3",
+    "svelte": "^3.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "**/*.js": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
