--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -28,11 +28,12 @@
     "commander": "^5.0.0",
     "globby": "^11.0.0",
     "pbts": "^1.0.3",
-    "protobufjs": "^6.8.9",
+    "protobufjs": "6.8.8",
     "fs-extra": "^9.0.1"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.1"
+    "@types/fs-extra": "^9.0.1",
+    "typescript":"^4.2.3"
   },
   "bin": {
     "pbts": "lib/index.js"
