--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,13 +7,15 @@
   "license": "MIT",
   "main": "lib/index.js",
   "module": "lib/index.es.js",
-  "types": "",
+  "unpkg": "lib/index.umd.js",
+  "types": "types/index.d.ts",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
   "files": [
-    "lib"
+    "lib",
+    "types"
   ],
   "repository": {
     "type": "git",
@@ -28,7 +30,7 @@
     "url": "https://github.com/brandonxiang/pb-to-typescript/issues"
   },
   "dependencies": {
-    "protobufjs": "^6.8.9"
+    "protobufjs": "6.8.8"
   },
   "devDependencies": {
     "rollup": "^2.42.1",
