--- a/package.json
+++ b/package.json
@@ -31,20 +31,6 @@
     "prettier-plugin-svelte": "^2.2.0",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
-    "typescript": "^4.2.3",
-    "husky": "^3.0.4",
-    "lint-staged": "^9.2.3",
-    "svelte": "^3.0.0"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*.js": [
-      "prettier --write",
-      "git add"
-    ]
+    "typescript": "^4.2.3"
   }
 }
