chore: pnpm action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,7 @@ jobs:
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
       - name: Install pnpm
         run: npm i -g pnpm
       - name: pnpm Build
-        run: pnpm install
+        run: pnpm i
