--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-node-${{ hashFiles('**/pnpm-lock.yaml') }}
-      - name: Install pnpm
-        run: npm i -g pnpm
+
+      - name: GitHub Action for pnpm
+        uses: znck/pnpm@v0.1.0-alpha.1
       - name: pnpm Build
         run: pnpm i
