--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}
 
-      - name: GitHub Action for pnpm
-        uses: znck/pnpm@v0.1.0-alpha.1
-        run: pnpm i
+      - name: install pnpm and npm
+        run: |
+          curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@dev npm@6
+      
+      - name: pnpm install
+        run: pnpm install
 
