--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,27 @@
 name: github-pages
 
-on: push
+on:
+  - push
+  - pull_request
 
 jobs:
-  pages:
-    runs-on: ubuntu-latest
-    steps:
+  runs-on: ubuntu-latest
+
+  steps:
+    build:
       - uses: actions/checkout@v2
 
-      - name: Setup Node
-        uses: actions/setup-node@v2.1.2
-        with:
-          node-version: '12.x'
-
-      - name: Cache .pnpm-store
+      - name: Cache pnpm modules
         uses: actions/cache@v2
+        env:
+          cache-name: cache-pnpm-modules
         with:
           path: ~/.pnpm-store
-          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-${{ hashFiles('**/package.json') }}
           restore-keys: |
-            ${{ runner.os }}-${{ matrix.node-version }}
+            ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-
 
-      - name: install pnpm and npm
-        run: |
-          curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@dev npm@6
-      
-      - name: pnpm install
-        run: pnpm install
-
+      - uses: pnpm/action-setup@v1.2.1
+        with:
+          version: 5.17.2
+          run_install: true
