--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,8 @@ jobs:
             restore-keys: |
               ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-
 
-        - uses: pnpm/action-setup@v1.2.1
+        - name: Setup PNPM
+          uses: pnpm/action-setup@v2.0.0
           with:
             version: 5.17.2
             run_install: true
