--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,24 @@ jobs:
   pages:
     runs-on: ubuntu-latest
     steps:
-      build:
-        - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-        - name: Cache pnpm modules
-          uses: actions/cache@v2
-          env:
-            cache-name: cache-pnpm-modules
-          with:
-            path: ~/.pnpm-store
-            key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-${{ hashFiles('**/package.json') }}
-            restore-keys: |
-              ${{ runner.os }}-build-${{ env.cache-name }}-${{ matrix.node-version }}-
+      - name: Setup Node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: '12.x'
 
-        - name: Setup PNPM
-          uses: pnpm/action-setup@v2.0.0
-          with:
-            version: 5.17.2
-            run_install: true
+      - name: Cache .pnpm-store
+        uses: actions/cache@v2
+        with:
+          path: ~/.pnpm-store
+          key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ matrix.node-version }}
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v2.0.0
+        with:
+          version: 5.17.2
+          run_install: true
+
