--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.node-version }}
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v2.0.0
-        with:
-          version: 5.18.7
-          run_install: true
+      - name: install pnpm and npm
+        run: |
+          curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@dev npm@6
+      - name: pnpm install
+        run: pnpm install
 
