--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pbts/web",
+  "name": "pbts-web",
   "version": "1.0.0",
   "private": true,
   "repository": "https://github.com/brandonxiang/svelte-webpack-template.git",
