--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pbts/cli",
+  "name": "pbts-cli",
   "version": "1.0.3",
   "description": "> TODO: description",
   "author": "weiping.xiang <weiping.xiang@shopee.com>",
