--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pbts/core",
+  "name": "pbts",
   "version": "1.0.3",
   "description": "> TODO: description",
   "author": "weiping.xiang <weiping.xiang@shopee.com>",
