--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,31 +7,40 @@
   "license": "MIT",
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server",
-    "analyze": "NODE_ENV=production webpack --env.analyze=true --mode=production --progress"
+    "dev": "webpack serve --content-base public",
+    "analyze": "NODE_ENV=production webpack --env.analyze=true --mode=production --progress",
+    "format": "prettier --write --svelte-sort-order scripts-markup-styles ./**/*.svelte"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.0.3",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.1",
-    "file-loader": "^4.2.0",
-    "globby": "^10.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.6.0",
-    "style-loader": "^0.23.1",
-    "svelte-loader": "2.13.3",
-    "svelte-preprocess": "^2.15.1",
-    "url-loader": "^2.1.0",
-    "webpack": "^4.30.0",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.3.1"
+    "copy-webpack-plugin": "^8.1.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.0.1",
+    "eslint": "^7.23.0",
+    "eslint-plugin-svelte3": "^3.1.2",
+    "file-loader": "^6.2.0",
+    "globby": "^11.0.3",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "mini-css-extract-plugin": "^1.3.4",
+    "postcss": "^8.2.9",
+    "postcss-load-config": "^3.0.1",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.2.0",
+    "svelte": "^3.31.2",
+    "svelte-loader": "^3.0.0",
+    "svelte-preprocess": "^4.7.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.16.0",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.7.7",
@@ -44,5 +53,5 @@
     "> 1%",
     "maintained node versions",
     "not dead"
-  ]
+    ]
 }
