--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dist"
   ],
   "devDependencies": {
+    "@changesets/cli": "^2.14.1",
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
