--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "pb-to-typescript",
   "version": "1.0.3",
-  "umd:main": "dist/index.umd.js",
-  "types": "dist/index.d.ts",
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
-  "unpkg": "dist/index.umd.js",
   "repository": "https://github.com/brandonxiang/pb-to-typescript.git",
   "author": "Weiping Xiang <weiping.xiang@shopee.com>",
   "license": "MIT",
+  "private": "true",
   "scripts": {
     "test": "jest",
     "lint": "eslint src/** --fix"
