--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -2,7 +2,7 @@
   "name": "pbts-cli",
   "version": "1.0.3",
   "description": "cli for pb-to-typescript",
-  "author": "weiping.xiang <weiping.xiang@shopee.com>",
+  "author": "weiping.xiang <1542453460@qq.com>",
   "homepage": "https://github.com/brandonxiang/pb-to-typescript#readme",
   "license": "MIT",
   "main": "lib/index.js",
