--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pbts-cli",
+  "name": "@pbts/cli",
   "version": "1.0.3",
   "description": "cli for pb-to-typescript",
   "author": "weiping.xiang <1542453460@qq.com>",
@@ -27,7 +27,7 @@
   "dependencies": {
     "commander": "^5.0.0",
     "globby": "^11.0.0",
-    "pbts": "^1.0.3",
+    "@pbts/core": "^1.0.3",
     "protobufjs": "6.8.8",
     "fs-extra": "^9.0.1"
   },
