--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: github-pages
+name: ci
 
 on: push
 
 jobs:
-  pages:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
