--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,17 +25,18 @@
     "url": "https://github.com/brandonxiang/pb-to-typescript/issues"
   },
   "dependencies": {
-    "commander": "^5.0.0",
+    "fs-extra": "^9.0.1",
     "globby": "^11.0.0",
-    "pbts": "^1.0.3",
+    "pkg-updater": "^1.0.4",
     "protobufjs": "6.8.8",
-    "fs-extra": "^9.0.1"
+    "sade": "^1.7.4",
+    "pbts": "^1.0.3"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.1",
-    "typescript":"^4.2.3"
+    "typescript": "^4.2.3"
   },
   "bin": {
-    "pbts": "lib/index.js"
+    "pbts": "bin.js"
   }
 }
