--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -27,7 +27,7 @@ jobs:
       - name: pnpm install
         run: pnpm install
       - name: build pages
-        run: pnpm --filter pbts-web run build
+        run: pnpm --filter @pbts/web run build
 
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3
