feat: add vscode package

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -4,7 +4,8 @@
     "rootDir": "src",
     "outDir": "lib",
     "declarationDir": "types",
-    "declaration": true
+    "declaration": true,
+    "lib": ["ES2020"]
   },
   "include": ["./src"],
   "exclude": ["./lib"]
