--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -33,9 +33,10 @@
     "protobufjs": "6.8.8"
   },
   "devDependencies": {
-    "rollup": "^2.42.1",
     "@rollup/plugin-typescript": "^8.2.0",
-    "typescript": "^4.2.3",
-    "tslib": "^2.1.0"
+    "@types/node": "^17.0.36",
+    "rollup": "^2.42.1",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
   }
 }
