--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -3,6 +3,7 @@
 	"displayName": "Protobuf To Typescript",
 	"description": "Convert protobuf struct to typescript type",
 	"version": "0.0.5",
+	"private": true,
 	"icon": "icon.png",
 	"publisher": "yishi",
 	"license": "MIT",
