--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -60,7 +60,8 @@
 		"glob": "^7.2.0",
 		"mocha": "^9.2.1",
 		"patch-package": "^6.4.7",
-		"typescript": "^4.5.5"
+		"typescript": "^4.5.5",
+		"rimraf": "^3.0.2"
 	},
 	"dependencies": {
 		"@pbts/core": "^2.0.2",
