--- a/package.json
+++ b/package.json
@@ -6,26 +6,22 @@
   "license": "MIT",
   "private": "true",
   "scripts": {
-    "test": "jest",
-    "lint": "eslint src/** --fix"
+    "lint": "eslint src/** --fix",
+    "test": "pnpm -r test"
   },
   "files": [
     "dist"
   ],
   "devDependencies": {
     "@changesets/cli": "^2.14.1",
-    "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
     "eslint": "^6.8.0",
     "eslint-plugin-svelte3": "^2.7.3",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.2.0",
-    "ts-jest": "^26.5.4",
-    "ts-node": "^8.5.4",
     "typescript": "^4.2.3"
   }
 }
