--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -44,7 +44,7 @@
 		"watch": "npm run -S esbuild-base -- --sourcemap --watch",
 		"pretest": "npm run build && npm run lint",
 		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"will-test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
 		"@types/copy-paste": "^1.1.30",
