--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -4,45 +4,17 @@
   "private": true,
   "author": "brandonxiang <1542453460@qq.com>",
   "license": "MIT",
+  "type": "module",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack serve --content-base public",
-    "analyze": "NODE_ENV=production webpack --env.analyze=true --mode=production --progress",
-    "format": "prettier --write --svelte-sort-order scripts-markup-styles ./**/*.svelte"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^8.1.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.23.0",
-    "eslint-plugin-svelte3": "^3.1.2",
-    "file-loader": "^6.2.0",
-    "globby": "^11.0.3",
-    "html-webpack-plugin": "^5.3.1",
-    "husky": "^6.0.0",
-    "lint-staged": "^10.5.4",
-    "mini-css-extract-plugin": "^1.3.4",
-    "postcss": "^8.2.9",
-    "postcss-load-config": "^3.0.1",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "svelte": "^3.31.2",
-    "svelte-loader": "^3.0.0",
-    "svelte-preprocess": "^4.7.0",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.16.0",
-    "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "vite": "^4.2.2",
+    "@sveltejs/vite-plugin-svelte": "2.0.3"
   },
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
     "svelte": "^3.0.0",
     "@pbts/core": "^2.0.1",
     "clipboard": "^2.0.8"
