--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./packages/web/dist
-
+          cname: pb.brandonxiang.top
