--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   ],
   "devDependencies": {
     "@changesets/cli": "^2.14.1",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-svelte3": "^2.7.3",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.2.0",
-    "typescript": "^4.2.3"
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "svelte": "^3.58.0",
+    "eslint": "^8.39.0",
+    "eslint-plugin-svelte3": "^4.0.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.7",
+    "prettier-plugin-svelte": "^2.10.0",
+    "typescript": "^5.0.4"
   }
 }
