--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -19,6 +19,7 @@
     "url": "git+https://github.com/brandonxiang/pb-to-typescript.git"
   },
   "scripts": {
+    "test": "uvu tests"
   },
   "bugs": {
     "url": "https://github.com/brandonxiang/pb-to-typescript/issues"
@@ -28,12 +29,19 @@
     "globby": "^11.0.0",
     "@pbts/core": "^2.0.2",
     "pkg-updater": "^1.0.4",
-    "protobufjs": "6.11.3",
-    "sade": "^1.7.4"
+    "protobufjs": "^7.2.3",
+    "shelljs": "^0.8.5",
+    "sade": "^1.7.4",
+    "lodash.isplainobject": "4.0.6"
   },
   "devDependencies": {
+    "@types/shelljs": "^0.8.12",
     "@types/fs-extra": "^9.0.1",
-    "typescript": "^4.2.3"
+    "typescript": "^5.0.4",
+    "@types/lodash.isplainobject": "4.0.7",
+    "@types/sade": "^1.7.4",
+    "uvu": "^0.5.6",
+    "ts-unused-exports": "^9.0.4"
   },
   "bin": {
     "pbts": "bin.js"
