--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/node": "^17.0.36",
     "typescript": "^5.0.4",
-    "uvu": "^0.5.6"
+    "uvu": "^0.5.6",
+    "ts-unused-exports": "^9.0.4"
   }
 }
