--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pbts/core",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "pbts core",
   "author": "weiping.xiang <1542453460@qq.com>",
   "homepage": "https://github.com/brandonxiang/pb-to-typescript#readme",
@@ -13,11 +13,12 @@
   },
   "type": "module",
   "directories": {
-    "lib": "lib",
-    "test": "tests"
+    "src": "src",
+    "test": "tests",
+    "types": "types"
   },
   "files": [
-    "lib",
+    "src",
     "types"
   ],
   "repository": {
@@ -40,5 +41,8 @@
     "typescript": "^5.0.4",
     "uvu": "^0.5.6",
     "ts-unused-exports": "^9.0.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
