--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-protobuf-to-typescript",
 	"displayName": "Protobuf To Typescript",
 	"description": "Convert protobuf struct to typescript type",
-	"version": "0.0.6",
+	"version": "0.0.7",
 	"private": true,
 	"icon": "icon.png",
 	"publisher": "yishi",
@@ -64,7 +64,7 @@
 		"rimraf": "^3.0.2"
 	},
 	"dependencies": {
-		"@pbts/core": "^3.0.0",
+		"pbts": "^4.0.0",
 		"copy-paste": "^1.3.0"
 	}
 }
