--- a/packages/vscode/tsconfig.json
+++ b/packages/vscode/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "ES2020",
+		"moduleResolution": "bundler",
+    "target": "ESNext",
+    "module": "ESNext",
 		"outDir": "out",
 		"lib": [
 			"ES2020"
