--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@pbts/web",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "private": true,
   "author": "brandonxiang <1542453460@qq.com>",
   "license": "MIT",
@@ -16,7 +16,7 @@
   },
   "dependencies": {
     "svelte": "^3.58.0",
-    "@pbts/core": "^3.0.0",
+    "pbts": "^4.0.0",
     "clipboard": "^2.0.8"
   },
   "browserslist": [
