--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v2.1.2
         with:
-          node-version: '14.x'
+          node-version: '16.x'
 
       - name: Cache .pnpm-store
         uses: actions/cache@v2
@@ -33,5 +33,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./packages/web/dist
+          publish_dir: packages/web/dist
           cname: pb.brandonxiang.top
