--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -28,6 +28,7 @@ jobs:
         run: pnpm install
       - name: build pages
         run: pnpm --filter @pbts/web run build
+        run: cd ./packages/web/dist && ls
 
       - name: GitHub Pages action
         uses: peaceiris/actions-gh-pages@v3
