--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pbts",
-  "version": "4.0.0",
+  "version": "4.0.1",
   "description": "pb-to-typescript",
   "author": "weiping.xiang <1542453460@qq.com>",
   "homepage": "https://github.com/brandonxiang/pb-to-typescript#readme",
@@ -43,7 +43,8 @@
     "protobufjs": "^7.2.3",
     "magic-string": "^0.30.0",
     "fs-extra": "11.1.1",
-    "sade": "^1.7.4"
+    "sade": "^1.7.4",
+    "pkg-updater": "^1.0.4"
   },
   "devDependencies": {
     "@types/fs-extra": "11.0.1",
