--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -9,7 +9,9 @@
     "declarationDir": "types",
     "declaration": true,
     "emitDeclarationOnly": true,
-    "lib": ["ES2020"]
+    "allowSyntheticDefaultImports": true,
+    "lib": ["ES2020"],
+    "target": "ES2020",
   },
   "include": ["./src", "./types/*"],
 }
