--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "svelte": "^3.58.0",
     "pbts": "^4.0.0",
-    "clipboard": "^2.0.8"
+    "clipboard": "^2.0.8",
+    "protobufjs": "^7.2.3"
   },
   "browserslist": [
     "last 1 version",
