--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,12 +4,15 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "npm",
-      "script": "watch",
-      "problemMatcher": "$tsc-watch",
+			"type": "npm",
+			"script": "watch",
+			"problemMatcher": "$esbuild-watch",
       "isBackground": true,
       "presentation": {
         "reveal": "never"
+      },
+      "options": {
+        "cwd": "${workspaceFolder}/packages/vscode"
       },
       "group": {
         "kind": "build",
