--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,18 +7,22 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "npm run build:web && npm run build:vscode",
+    "build:vscode": "vite build -c vite.vscode.config.js",
+    "build:web": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.2.2",
-    "@sveltejs/vite-plugin-svelte": "2.0.3"
+    "vite": "^4.5.0",
+    "@sveltejs/vite-plugin-svelte": "^2.5.2",
+    "vite-plugin-singlefile": "^0.13.5",
+    "vite-plugin-html": "^3.2.0"
   },
   "dependencies": {
-    "svelte": "^3.58.0",
+    "svelte": "^4.2.3",
     "pbts": "^4.0.0",
-    "clipboard": "^2.0.8",
-    "protobufjs": "^7.2.3"
+    "clipboard": "^2.0.11",
+    "protobufjs": "^7.2.5"
   },
   "browserslist": [
     "last 1 version",
