--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -32,7 +32,7 @@
     "url": "git+https://github.com/brandonxiang/pb-to-typescript.git"
   },
   "scripts": {
-    "check": "tsc",
+    "check": "rollup -c",
     "test": "uvu tests"
   },
   "bugs": {
@@ -46,6 +46,8 @@
     "pkg-updater": "^1.0.4"
   },
   "devDependencies": {
+    "rollup": "^4.9.1",
+    "rollup-plugin-dts": "^6.1.0",
     "@types/fs-extra": "11.0.1",
     "@types/node": "^17.0.36",
     "@types/sade": "^1.7.4",
