--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "@changesets/cli": "^2.14.1",
     "@typescript-eslint/eslint-plugin": "5.59.2",
     "@typescript-eslint/parser": "5.59.2",
-    "svelte": "^3.58.0",
+    "svelte": "^4.2.8",
     "eslint": "^8.39.0",
-    "eslint-plugin-svelte": "2.27.3",
+    "eslint-plugin-svelte": "^2.35.1",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.7",
-    "prettier-plugin-svelte": "^2.10.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
     "typescript": "^5.0.4"
   }
 }
