--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -40,20 +40,18 @@
   },
   "dependencies": {
     "protobufjs": "^7.2.3",
-    "magic-string": "^0.30.0",
-    "fs-extra": "11.1.1",
-    "sade": "^1.7.4",
-    "pkg-updater": "^1.0.4"
+    "magic-string": "^0.30.0"
   },
   "devDependencies": {
     "rollup": "^4.9.1",
     "rollup-plugin-dts": "^6.1.0",
-    "@types/fs-extra": "11.0.1",
     "@types/node": "^17.0.36",
     "@types/sade": "^1.7.4",
     "typescript": "^5.0.4",
     "uvu": "^0.5.6",
-    "ts-unused-exports": "^9.0.4"
+    "ts-unused-exports": "^9.0.4",
+    "sade": "^1.7.4",
+    "pkg-updater": "^1.0.4"
   },
   "bin": {
     "pbts": "bin.js"
