--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,7 +51,8 @@
     "uvu": "^0.5.6",
     "ts-unused-exports": "^9.0.4",
     "sade": "^1.7.4",
-    "pkg-updater": "^1.0.4"
+    "pkg-updater": "^1.0.4",
+    "release-it": "^17.6.0"
   },
   "bin": {
     "pbts": "bin.js"
