--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -22,7 +22,9 @@
     "svelte": "^4.2.18",
     "pbts": "^4.0.2",
     "clipboard": "^2.0.11",
-    "protobufjs": "^7.3.3"
+    "protobufjs": "^7.3.3",
+    "svelte-codemirror-editor": "^1.4.0",
+    "@codemirror/lang-javascript": "^6.2.2"
   },
   "browserslist": [
     "last 1 version",
