--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -6,15 +6,15 @@ jobs:
   pages:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Setup Node
-        uses: actions/setup-node@v2.1.2
+        uses: actions/setup-node@v3
         with:
           node-version: '20.x'
 
       - name: Cache .pnpm-store
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.pnpm-store
           key: ${{ runner.os }}-${{ matrix.node-version }}-${{ hashFiles('**/pnpm-lock.yaml') }}
@@ -25,7 +25,7 @@ jobs:
         run: |
           curl -L https://pnpm.js.org/pnpm.js | node - add --global pnpm@dev npm@6
       - name: pnpm install
-        run: pnpm install
+        run: pnpm install --no-frozen-lockfile
       - name: build pages
         run: pnpm --filter @pbts/web run build
 
