--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
             ${{ runner.os }}-pnpm-
 
       - name: Install pnpm
-        run: npm install -g pnpm
+        run: curl -L https://pnpm.js.org/pnpm.js
 
       - name: Install dependencies
         run: pnpm install --no-frozen-lockfile
