--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: 8
+
       - name: pnpm install
         run: pnpm install --no-frozen-lockfile
       - name: build pages
