--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -13,10 +13,10 @@
 	"categories": [
 		"Other"
 	],
-	"repository": {
-		"type": "git",
-		"url": "git@github.com:kukudeshiyi/vscode-protobuf-to-typescript.git"
-	},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/brandonxiang/protobuf-to-typescript.git"
+  },
 	"activationEvents": [
 		"onCommand:pbToTypescript.fromSelection",
 		"onCommand:pbToTypescript.fromClipboard",
@@ -45,8 +45,8 @@
       "activitybar": [
         {
           "id": "pbts",
-          "title": "pb to typescript",
-          "icon": "media/dep.svg"
+          "title": "protobuf to typescript",
+          "icon": "media/cat2.svg"
         }
       ]
     },
@@ -93,7 +93,7 @@
 		"rimraf": "^3.0.2"
 	},
 	"dependencies": {
-		"pbts": "^4.0.0",
+		"pbts": "^4.0.3",
 		"copy-paste": "1.3.0"
 	}
 }
