--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -2,7 +2,7 @@
 	"name": "vscode-protobuf-to-typescript",
 	"displayName": "Protobuf To Typescript",
 	"description": "Convert protobuf struct to typescript type",
-	"version": "0.0.7",
+	"version": "0.0.8",
 	"private": true,
 	"icon": "icon.png",
 	"publisher": "yishi",
@@ -17,6 +17,11 @@
 		"type": "git",
 		"url": "git+https://github.com/brandonxiang/protobuf-to-typescript.git"
 	},
+	"activationEvents": [
+		"onCommand:pbToTypescript.fromSelection",
+		"onCommand:pbToTypescript.fromClipboard",
+		"onCommand:pbToTypescript.convertOnAir"
+	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"configuration": {
@@ -92,7 +97,8 @@
 		"watch": "npm run -S esbuild-base -- --sourcemap --watch",
 		"pretest": "npm run build && npm run lint",
 		"lint": "eslint src --ext ts",
-		"will-test": "node ./out/test/runTest.js"
+		"will-test": "node ./out/test/runTest.js",
+		"publish": "pnpm vsce publish --no-dependencies"
 	},
 	"devDependencies": {
 		"@types/copy-paste": "^1.1.30",
@@ -112,7 +118,7 @@
 		"rimraf": "^3.0.2"
 	},
 	"dependencies": {
-		"pbts": "^4.0.5",
+		"pbts": "^4.0.6",
 		"copy-paste": "1.3.0"
 	}
 }
