--- a/.github/workflows/ollama_review.yml
+++ b/.github/workflows/ollama_review.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Ollama Code Review
-        uses: ./.github/actions/ollama-code-review
+        uses: zakerby/gh-code-review
         with:
           llm-model: 'codegemma'
         env:
