--- a/packages/vscode/package.json
+++ b/packages/vscode/package.json
@@ -91,7 +91,6 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run -S esbuild-base -- --minify",
-		"postinstall": "patch-package",
 		"esbuild-base": "rimraf out && esbuild ./src/extension.ts --bundle --outdir=out --external:vscode --format=cjs --platform=node",
 		"build": "npm run -S esbuild-base -- --sourcemap",
 		"watch": "npm run -S esbuild-base -- --sourcemap --watch",
@@ -113,12 +112,11 @@
 		"eslint": "^8.9.0",
 		"glob": "^7.2.0",
 		"mocha": "^9.2.1",
-		"patch-package": "^6.4.7",
 		"typescript": "^4.5.5",
 		"rimraf": "^3.0.2"
 	},
 	"dependencies": {
 		"pbts": "^4.0.7",
-		"copy-paste": "1.3.0"
+		"@brandonxiang/copy-paste": "1.5.4"
 	}
 }
